# mightrix

./: 2  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  matrix.rs  reftrix.rs  stacktrix.rs
tests/: col_first_matrix.rs  row_first_matrix.rs
