[package]
name = "mightrix"
version = "0.1.0"
authors = ["Korbinian Flietel"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A library to treat continous memory as a matrix."
repository = "https://github.com/kojofl/mightrix"

keywords = ["matrix"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
